capsules/spectral-bridge/tests/ui/reciprocal_experiential_cannot_be_forged.rs
use spectral_bridge_server::reciprocal_experiential::ReciprocalPresenceReceiptV1;

fn main() {
    let _forged = ReciprocalPresenceReceiptV1 {};
}
